fix: 🐛 vertically align checkbox

--- a/addons/rose/addon/styles/rose/components/dropdown/_item.scss
+++ b/addons/rose/addon/styles/rose/components/dropdown/_item.scss
@@ -87,7 +87,8 @@ $checkmark: url("data:image/svg+xml;utf-8,<svg viewBox='0 0 24 24' fill='%231563
       }
 
       &::after {
-        top: sizing.rems(xxs) + sizing.rems(xxxs);
+        //top: 0.25rem
+        top: sizing.rems(xxs);
         right: sizing.rems(xs);
         left: auto;
         border: sizing.rems(xxxs) solid var(--ui-gray-subtler-2);
